--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
     <canvas id="canvas"></canvas>
     
 </body>
-<script src="/scr/main.js"></script>
+<script src="./scr/main.js"></script>
 </html>
